[tool.poetry]
name = "python-chat-ui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
openai = "^0.27.8"
gradio = "^3.40.1"
nicegui = "^1.3.11"
dash = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
